fixed bug with css loader position on mobile and reduced initial wait time for better user experience

--- a/styles/css-loader.css
+++ b/styles/css-loader.css
@@ -5,8 +5,8 @@
   left: 0px;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  /* width: 100vw; */
+  /* height: 100vh; */
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   z-index: 2;
 }
